# Testffmpeg

app/: build.gradle
app/src/androidTest/java/com/founq/sdk/testffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/founq/sdk/testffmpeg/: InsecureSHA1PRNGKeyDerivator.java  JniUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/founq/sdk/testffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
